samples/_failures_safe/1761721711_6e17dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac2eeb3e.c: In function ‘process_tokens’:
./samples/SAFE/__tmp_ac2eeb3e.c:166:5: error: expected expression at end of input
  166 |     for (size_t i = 0;
      |     ^~~
./samples/SAFE/__tmp_ac2eeb3e.c:166:5: error: expected declaration or statement at end of input
